[package]
name = "social"
version = "0.1.0"
authors = ["Krishna Kumar <krishnak@thoughtworks.com>"]

[dependencies]
libc = "^0.2"
libsodium-sys = "0.0.16"
rmp-serde = "^0.13"
rustc-serialize = "^0.3"
sodiumoxide = "*"
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
libsqlite3-sys = "0.9"
rusqlite = "0.13.0"
